# metrics-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: application.toml  binary_operations.yaml  logger.yaml  measurements.yaml  metric_boundaries.yaml  metric_format.yaml  metric_pipelines.toml  node_list.yaml  property_mapping.yaml  webscraper.yaml
