[project]
name = "metrics-manager"
description = "A manager to collect, process and store metrics from a network of data nodes."
version = "1.2.1"

readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "tomli >= 2.0.1",
  "fast-database-clients @ git+https://github.com/generalmattza/fast-database-clients.git@v2.0.8",
  "buffered @ git+https://github.com/generalmattza/buffered.git@v1.0.1",
  "network-simple @ git+https://github.com/generalmattza/network-simple.git@v1.0.5",
  "data-node-network @ git+https://github.com/generalmattza/data-node-network.git@v1.0.3",
  "metrics-processor @ git+https://github.com/generalmattza/metrics-processor.git@v3.0.28",
  "html-scraper-agent @ git+https://github.com/generalmattza/html-scraper-agent.git@v1.0.1",
  "mqtt-node-network @ git+https://github.com/generalmattza/mqtt-node-network.git@v1.2.0",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
test = ["pytest >= 8.0.0"]

[project.urls]
homepage = "https://davidson.engineering"
repository = "https://github.com/generalmattza/metrics-manager"
# documentation = "https://readthedocs.org"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
